noinst_LIBRARIES = libProglib.a

libProglib_a_SOURCES = \
	ParseArgv.c \
	ParseArgv.h \
	Proglib.h \
	louis_splines.h \
	print_error.c \
	print_error.h \
	print_version.c \
	print_version.h \
	time_stamp.c \
	time_stamp.h \
	vax_conversions.c \
	vax_conversions.h

EXTRA_DIST = #$(oddities)

oddities = \
	def_tag_io.h \
	evaluate.c \
	minc_def.h \
	splines.h \
	tag_io.c \
	test.c
